--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
-    <script src="interface.js" type="module"></script>
+    <script src="./interface.js" type="module"></script>
 </head>
 <body>
     
