refactor: src and assets, render immediately
Changed locations of js and css to src, and
added assets for css, images for hitting,
missing and background.
If you sink a ship it doesnt wait to re-render

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
-    <link rel="stylesheet" href="./index.css">
-    <script src="./interface.js" type="module"></script>
+    <link rel="stylesheet" href="src/index.css">
+    <script src="src/interface.js" type="module"></script>
 </head>
 <body>
-    
+    <p class="game-title">BATTLESHIP</p>
 </body>
 </html>
